--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -19,6 +19,10 @@
   justify-content: space-evenly;
 }
 
+.navigatorContainer nav ul li:hover {
+  color: rgb(233, 121, 121);
+}
+
 .authContainer {
   gap: 1rem;
   display: flex;
