--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,12 +15,11 @@ ul {
 
 a {
   font-weight: 500;
-  color: #ffffff;
   text-decoration: inherit;
 }
 
-a:hover {
-  color: #535bf2;
+a:visited {
+  color: black;
 }
 
 h1 {
@@ -50,7 +49,6 @@ button:focus-visible {
 }
 
 .page-container {
-  background-color: #505050;
   width: 100%;
   min-height: 100vh;
   display: flex;
