structuring product cards

--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -2,7 +2,7 @@
   width: 100vw;
   display: flex;
   position: fixed;
-  background-color: var(--color-background);
+  background-color: var(--color-background-light);
   border-bottom: solid 1px;
 }
 
