--- a/src/app/components/ProductsCard/ProductCard.module.css
+++ b/src/app/components/ProductsCard/ProductCard.module.css
@@ -6,10 +6,16 @@
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.301);
+  background-color: var(--color-background-light);
+}
+
+.cardContainer:hover {
+  box-shadow: 0 0 10px var(--color-primary);
 }
 
 .imageContainer {
-  background-color: rgb(114, 114, 114);
+  background-color: var(--color-background);
   border-radius: 5px;
   width: 100%;
   height: 300px;
