--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,11 +3,33 @@ body {
   padding: 0;
   display: flex;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-ul {
+input {
+  background-color: var(--color-background-light);
+  font-size: 15px;
+  padding: 1rem;
+  border: none;
+  border: solid 1px;
+  border-radius: 3px;
+  border-color: var(--color-background-light);
+  color: black;
+}
+
+.main {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
+}
+
+ul, 
+nav {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -16,7 +38,7 @@ ul {
 a {
   font-weight: 500;
   text-decoration: inherit;
-  color: black;
+  color: var(--color-font);
 }
 
 a:hover {
@@ -24,7 +46,7 @@ a:hover {
 }
 
 a:visited {
-  color: black;
+  color: var(--color-font);
 }
 
 h1 {
@@ -33,13 +55,13 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 5px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-primary);
   cursor: pointer;
   transition: border-color 0.25s;
   color: white;
@@ -47,6 +69,7 @@ button {
 
 button:hover {
   border-color: var(--color-primary);
+  background-color: var(--color-primary-hover);
 }
 
 button:focus,
@@ -59,4 +82,52 @@ button:focus-visible {
   min-height: 100vh;
   display: flex;
   padding-top: 80px;
+}
+
+.nav-container {
+  width: 100%;
+  position: fixed;
+  padding-top: .7rem;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-background-light);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.auth-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem;
+}
+
+.auth-form {
+  width: 100%;
+  max-width: 500px;
+  padding: 3rem;
+  background-color: var(--color-background-dark);
+  box-shadow: 0 0 10px black;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.form-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.pad-0 {
+  padding: 0;
+}
+
+.mar-0 {
+  margin: 0;
 }
