--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -5,13 +5,19 @@
   font-family: Poppins;
   line-height: 1.5;
   font-weight: 400;
+  width: 100vw;
+  min-height: 100vh;
 
-  --color-primary: rgb(110, 155, 206);
-  --color-background: rgb(212, 212, 212);
-  --color-background-light: rgb(243, 243, 243);
-  --color-background-dark: rgb(37, 37, 37);
-  --color-background-nav: rgba(37, 37, 37, 0.836);
-  --color-font: rgb(0, 0, 0);
+  --color-primary-hover: rgb(148, 45, 45);
+  --color-primary: rgb(139, 66, 56);
+  --color-background: rgb(48, 48, 48);
+  --color-background-light: rgb(223, 223, 223);
+  --color-background-dark: rgb(22, 22, 22);
+  --color-background-dark-opacity: rgba(22, 22, 22, 0.788);
+  --color-font: rgb(241, 241, 241);
+  --color-font-dark: rgb(0, 0, 0);
+  --bg-button-secundary: #344b97;
+  --bg-button-secundary-hover: #4a63b6;
 
   color-scheme: light dark;
   color: var(--color-font);
