--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -8,8 +8,9 @@
   width: 100vw;
   min-height: 100vh;
 
-  --color-primary-hover: rgb(148, 45, 45);
   --color-primary: rgb(139, 66, 56);
+  --color-secundary: #5e4451;
+  --color-primary-hover: rgb(148, 45, 45);
   --color-background: rgb(48, 48, 48);
   --color-background-light: rgb(223, 223, 223);
   --color-background-dark: rgb(22, 22, 22);
@@ -21,7 +22,7 @@
 
   color-scheme: light dark;
   color: var(--color-font);
-  background-color: var(--color-background);
+  background: linear-gradient(168deg, var(--color-background) 10% , var(--color-secundary) 80%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,4 +31,21 @@
   -webkit-text-size-adjust: 100%;
   padding: 0;
   margin: 0;
+}
+
+::-webkit-scrollbar {
+  z-index: 9999999;
+  width: 7px;
+  height: 100%;
+  position: absolute;
+}
+::-webkit-scrollbar-track {
+  background: linear-gradient(168deg, var(--color-background) 10% , var(--color-secundary) 80%);
+}
+::-webkit-scrollbar-thumb {
+  background: #fff2;
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #fff4;
 }
