--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -10,7 +10,8 @@
 
   --color-primary: rgb(139, 66, 56);
   --color-secundary: #5e4451;
-  --color-primary-hover: rgb(148, 45, 45);
+  --color-primary-hover: rgb(122, 39, 39);
+  --color-secundary-hover: #703345;
   --color-background: rgb(48, 48, 48);
   --color-background-light: rgb(223, 223, 223);
   --color-background-dark: rgb(22, 22, 22);
@@ -44,8 +45,8 @@
 }
 ::-webkit-scrollbar-thumb {
   background: #fff2;
-  border-radius: 1px;
+  border-radius: 7px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #fff4;
+  background: var(--color-secundary-hover);
 }
