--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -8,9 +8,10 @@
   align-items: center;
   justify-content: center;
   background-color: var(--color-background-dark-opacity);
+  background: linear-gradient(to top, var(--color-secundary) 1% , var(--color-background) 80%);
   backdrop-filter: blur(10px);
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.74);  
   border-radius: 5px;
+  transition-duration: .2s;
 }
 
 .navigatorContainer nav {
@@ -30,7 +31,7 @@
 }
 
 .navigatorContainer nav ul li:hover {
-  color: var(--color-primary-hover);
+  color: white;
   filter: brightness(1.5);
 }
 
