--- a/src/app/components/ProductsCard/ProductCard.module.css
+++ b/src/app/components/ProductsCard/ProductCard.module.css
@@ -6,9 +6,8 @@
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.301);
-  background-color: var(--color-background-light);
-  color: var(--color-font-dark);
+  box-shadow: 0 0 10px rgba(216, 216, 216, 0.301);
+  background: linear-gradient(168deg, var(--color-background) 50% , var(--color-secundary) 100%);
 }
 
 .cardContainer:hover {
