--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -12,9 +12,10 @@
   --color-secundary: #5e4451;
   --color-primary-hover: rgb(122, 39, 39);
   --color-secundary-hover: #703345;
-  --color-background: rgb(48, 48, 48);
+  --color-background: rgb(31, 31, 31);
   --color-background-light: rgb(223, 223, 223);
   --color-background-dark: rgb(22, 22, 22);
+  --color-background-darker: rgb(8, 8, 8);
   --color-background-dark-opacity: rgba(22, 22, 22, 0.788);
   --color-font: rgb(241, 241, 241);
   --color-font-dark: rgb(0, 0, 0);
@@ -23,7 +24,7 @@
 
   color-scheme: light dark;
   color: var(--color-font);
-  background: linear-gradient(168deg, var(--color-background) 10% , var(--color-secundary) 80%);
+  background: linear-gradient(168deg, var(--color-background) 10% , var(--color-background) 80%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
