--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -5,7 +5,7 @@
   font-family: Poppins;
   line-height: 1.5;
   font-weight: 400;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 
   --color-primary: rgb(139, 66, 56);
