--- a/src/app/components/UserList/UserList.module.css
+++ b/src/app/components/UserList/UserList.module.css
@@ -1,24 +1,53 @@
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
 .fieldsUl {
-  background: linear-gradient(168deg, var(--color-background-darker) 10% , var(--color-background-dark) 80%);
+  background: linear-gradient(168deg, var(--color-background-darker) 10%, var(--color-background-dark) 80%);
   display: flex;
   border-radius: 5px;
   justify-content: space-evenly;
+  width: 100%;
 }
+
+.fieldsUl li {
+  width: 300px;
+  text-align: center;
+}
+
 .usersUl {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
   gap: .5rem;
+  justify-content: space-evenly;
 }
 
-.usersUl li{
+.usersUlLi {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: rgb(236, 236, 236);
   font-size: 14px;
   border-radius: 5px;
-  background-color: rgb(236, 236, 236);
   color: black;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.usersUlLi li {
+  width: 300px;
+  text-align: center;
+}
+
+.profilePic {
+  border-radius: 100%;
+}
+
+.optionsContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
