--- a/src/app/components/UserMenu/UserMenu.module.css
+++ b/src/app/components/UserMenu/UserMenu.module.css
@@ -1,6 +1,5 @@
 .profileMenuContainer {
-  background-color: var(--color-background-dark-opacity);
-  backdrop-filter: blur(10px);
+  background-color: var(--color-background-dark);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.74);  
   border-radius: 5px;
   position: absolute;
@@ -10,6 +9,7 @@
   flex-direction: column;
   padding: 1rem;
   gap: .5rem;
+  z-index: 99;
 }
 
 .liOption {
