--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,8 @@ nav {
   padding: 0;
   margin: 0;
   list-style: none;
+  display: flex;
+  align-items: center;
 }
 
 a {
@@ -143,4 +145,39 @@ button:focus-visible {
   border-radius: 5px;
   box-shadow: 0 0 4px rgba(255, 255, 255, 0.644);
   background: linear-gradient(168deg, var(--color-background) 50% , var(--color-background-darker) 80%);
+}
+
+.button-nostyle {
+  border: none;
+  background-color: transparent;
+}
+
+.button-nostyle:hover {
+  background-color: transparent;
+  box-shadow: 0 0 3px black;
+}
+
+.button-user-options {
+  background-color: var(--bg-button-tertiary);
+  color: white;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.button-user-options:hover {
+  color: white;
+  background-color: var(--bg-button-tertiary-hover);
+}
+
+textarea {
+  background-color: var(--color-background-light);
+  font-size: 15px;
+  padding: 1rem;
+  border: none;
+  border: solid 1px;
+  border-radius: 3px;
+  border-color: var(--color-background-light);
+  color: black;
+  font-family: Poppins;
+  resize: vertical;
 }
