--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -1,11 +1,6 @@
-.navContainerExt {
-  padding-right: 3rem;
-  padding-left: 3rem;
-}
-
 .logo {
   transition-duration: .2s;
-  width: 150px;
+  width: 130px;
   height: 35px;
   background-size: contain;
   background-repeat: no-repeat;
@@ -19,7 +14,7 @@
   background-color: var(--color-background-dark-opacity);
   background: linear-gradient(to top, var(--color-secundary) 1% , var(--color-background) 100%);
   backdrop-filter: blur(10px);
-  border-radius: 5px;
+  border-bottom: solid thin rgb(83, 83, 83);
   transition-duration: .2s;
 }
 
@@ -54,4 +49,20 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+}
+
+.logoSection,
+.userSection {
+  width: 200px;
+}
+
+.userSection {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.menuSection {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
