--- a/src/app/components/ProductsCard/ProductCard.module.css
+++ b/src/app/components/ProductsCard/ProductCard.module.css
@@ -1,13 +1,13 @@
 .cardContainer {
   height: auto;
-  width: 300px;
-  padding: 1rem;
+  width: 250px;
+  padding: 1.3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(216, 216, 216, 0.301);
-  background: linear-gradient(168deg, var(--color-background) 50% , var(--color-secundary) 100%);
+  background: linear-gradient(168deg, var(--color-background) 50%, var(--color-secundary) 100%);
 }
 
 .cardContainer:hover {
@@ -18,9 +18,26 @@
   background-color: var(--color-background);
   border-radius: 5px;
   width: 100%;
-  height: 300px;
+  height: 200px;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.data {
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.price {
+  width: 100%;
+  font-size: 15px;
+}
+
+.title {
+  width: 100%;
+  font-size: 13px;
 }
