--- a/src/app/components/ProductList/ProductList.module.css
+++ b/src/app/components/ProductList/ProductList.module.css
@@ -35,7 +35,8 @@
 
 .productsUlLi li {
   width: 300px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .optionsContainer {
