--- a/src/app/components/ProductsCard/ProductCard.module.css
+++ b/src/app/components/ProductsCard/ProductCard.module.css
@@ -12,6 +12,7 @@
 
 .cardContainer:hover {
   box-shadow: 0 0 10px var(--color-primary);
+  cursor: pointer;
 }
 
 .imageContainer {
@@ -34,7 +35,7 @@
 
 .price {
   width: 100%;
-  font-size: 15px;
+  font-size: 18px;
 }
 
 .title {
