--- a/src/app/components/UserMenu/UserMenu.module.css
+++ b/src/app/components/UserMenu/UserMenu.module.css
@@ -2,14 +2,14 @@
   background-color: var(--color-background-dark);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.74);  
   border-radius: 5px;
-  position: absolute;
-  top: 4rem;
-  right: 0;
   display: none;
   flex-direction: column;
   padding: 1rem;
   gap: .5rem;
   z-index: 99;
+  position: absolute;
+  top: 90px;
+  text-align: left;
 }
 
 .liOption {
