--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@ input {
   margin: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 3rem;
 }
 
@@ -81,10 +82,11 @@ button:focus-visible {
 
 .page-container {
   width: 100%;
+  max-width: 1190px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-top: 3rem;
+  padding-top: 5rem;
 }
 
 .nav-container {
@@ -96,7 +98,7 @@ button:focus-visible {
 .divider {
   width: 100%;
   height: 1px;
-  background-color: var(--color-background-light);
+  background-color: var(--color-gray-75);
   margin-top: 1rem;
   margin-bottom: 1rem;
   border-radius: 100%;
@@ -183,4 +185,8 @@ textarea {
   color: black;
   font-family: Poppins;
   resize: vertical;
+}
+
+.link-to {
+  text-decoration: underline;
 }
