--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,7 +83,6 @@ button:focus-visible {
 .page-container {
   width: 100%;
   max-width: 1190px;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   padding-top: 5rem;
@@ -190,3 +189,26 @@ textarea {
 .link-to {
   text-decoration: underline;
 }
+
+.home-container {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loader {
+  margin-top: 1rem;
+  width: 100%;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 15px;
+  padding-bottom: 8px;
+  background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
+  animation: l2 2s linear infinite;
+}
+.loader:before {
+  content:"Cargando..."
+}
+
+@keyframes l2 {to{background-size: 100% 3px}}
