--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -46,6 +46,13 @@
   height: 30px;
 }
 
+.menuContainer nav {
+  width: 100%;
+  max-width: 1190px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .authContainer {
   gap: 1rem;
   display: flex;
@@ -85,14 +92,14 @@
 }
 
 .underLogo {
-  width: 150px;
-  height: 10px;
+  width: 200px;
+  height: 0;
   padding: 0;
   margin: 0;
 }
 
 .menuSection {
-  width: 50%;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   max-width: 1190px;
