--- a/src/app/components/Preloader/Preloader.module.css
+++ b/src/app/components/Preloader/Preloader.module.css
@@ -2,7 +2,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
