--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,12 @@ body {
   flex-direction: column;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: bolder;
   padding: 0;
@@ -36,7 +41,7 @@ input {
   padding: 3rem;
 }
 
-ul, 
+ul,
 nav {
   padding: 0;
   margin: 0;
@@ -153,7 +158,7 @@ button:focus-visible {
   justify-content: center;
   border-radius: 5px;
   box-shadow: 0 0 4px rgba(255, 255, 255, 0.644);
-  background: linear-gradient(168deg, var(--color-background) 50% , var(--color-background-darker) 80%);
+  background: linear-gradient(168deg, var(--color-background) 50%, var(--color-background-darker) 80%);
 }
 
 .button-nostyle {
@@ -235,10 +240,14 @@ select:hover {
 }
 
 .loader:before {
-  content:"Cargando..."
+  content: "Cargando..."
 }
 
-@keyframes l2 {to{background-size: 100% 3px}}
+@keyframes l2 {
+  to {
+    background-size: 100% 3px
+  }
+}
 
 .error-span {
   background-color: var(--color-error-background);
