adding product delete system

--- a/src/app/components/ProductDetails/ProductDetails.module.css
+++ b/src/app/components/ProductDetails/ProductDetails.module.css
@@ -9,12 +9,13 @@
 
 .mainImageContainer {
   width: 100%;
-  max-height: 450px;
+  height: 450px;
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
   border-radius: 5px;
+  background-color: var(--color-background-darker);
 }
 
 .gallerySection {
