--- a/src/app/components/GallerySetCreate/GallerySetCreate.module.css
+++ b/src/app/components/GallerySetCreate/GallerySetCreate.module.css
@@ -50,3 +50,22 @@
   align-items: center;
   justify-content: center;
 }
+
+.buttonsContainer {
+  display: flex;
+  gap: 1rem;
+}
+
+.instagramButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(82, 82, 82);
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  border-radius: 5px;
+}
+
+.instagramButton:hover {
+  background-color: rgb(58, 58, 58);
+}
