--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -286,6 +286,10 @@ select:hover {
   align-items: center;
 }
 
+.column {
+  flex-direction: column;
+}
+
 .contact-methods {
   position: fixed;
   bottom: 10px;
