--- a/src/app/components/ContactMethods/ContactMethods.module.css
+++ b/src/app/components/ContactMethods/ContactMethods.module.css
@@ -16,3 +16,15 @@
   cursor: pointer;
   filter: grayscale(0);
 }
+
+@media only screen and (max-width: 1200px) {
+  .contactMethod {
+    bottom: 0;
+    right: 0;
+    padding-top: .3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+}
