--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -301,6 +301,22 @@ select:hover {
   right: 3rem;
 }
 
+
+@media only screen and (max-width: 1200px) {
+  .contact-methods {
+    bottom: 0;
+    right: 0;
+    width: 100vw;
+    padding: 0;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-background-dark);
+  }
+}
+
 .g-1 {
   gap: 1rem;
 }
