--- a/src/app/components/ContactMethods/ContactMethods.module.css
+++ b/src/app/components/ContactMethods/ContactMethods.module.css
@@ -17,14 +17,16 @@
   filter: grayscale(0);
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: calc(1200px + 6rem)) {
   .contactMethod {
     bottom: 0;
     right: 0;
     padding-top: .3rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
