--- a/src/app/components/HomeGallery/HomeGallery.module.css
+++ b/src/app/components/HomeGallery/HomeGallery.module.css
@@ -1,11 +1,11 @@
 .container {
   margin: 0;
   padding: 0;
-  height: 500px;
   overflow: hidden;
   list-style: none;
   display: flex;
   flex-direction: column;
+  margin-bottom: 3rem;
 }
 
 h1:hover {
@@ -19,4 +19,11 @@ h1:hover {
 .container ul li:hover {
   filter: grayscale(0);
   cursor: pointer;
+}
+
+@media only screen and (max-width: calc(1200px + 6rem)) {
+  .container {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
