--- a/src/app/components/Slider/Slider.module.css
+++ b/src/app/components/Slider/Slider.module.css
@@ -19,3 +19,20 @@
 .logo {
   max-width: 500px;
 }
+
+.text {
+  text-align: center;
+}
+
+@media only screen and (max-width: calc(1200px + 6rem)) {
+  .logoContainer {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .text {
+    font-size: 12px;
+  }
+}
