--- a/src/app/components/Preloader/Preloader.module.css
+++ b/src/app/components/Preloader/Preloader.module.css
@@ -11,6 +11,16 @@
   overflow: hidden;
 }
 
+.logo {
+  min-width: 500px;
+}
+
 .logoContainer {
   max-width: 1190px;
+}
+
+@media only screen and (max-width: calc(1200px + 6rem)) {
+  .logo {
+    min-width: calc(500px - 6rem);
+  }
 }
