--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -301,6 +301,11 @@ select:hover {
   right: 3rem;
 }
 
+.span-routes {
+  display: flex;
+  margin-bottom: 3rem;
+  align-items: center;
+}
 
 @media only screen and (max-width: calc(1200px + 6rem)) {
   .contact-methods {
