--- a/src/app/components/FormMessage/FormMessage.module.css
+++ b/src/app/components/FormMessage/FormMessage.module.css
@@ -12,3 +12,10 @@
 .inputContainer input{
   width: 100%;
 }
+
+.sendedMessage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
