--- a/src/app/components/Slider/Slider.module.css
+++ b/src/app/components/Slider/Slider.module.css
@@ -1,17 +1,17 @@
 .container {
-  min-height: 150px;
-  margin-top: 6rem;
+  height: 300px;
   max-height: 50vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
 }
 
 .logoContainer {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   flex-direction: column;
 }
@@ -23,6 +23,42 @@
 .text {
   text-align: center;
 }
+
+.sliderContainer {
+  display: flex;
+  width: 400vw;
+  height: 300px;
+  max-height: 50vh;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  transition-duration: 1s;
+}
+
+.sliderCard {
+  width: 100vw;
+  height: 300px;
+  max-height: 50vh;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.background {
+  width: 100vw;
+  display: flex;
+  background-color: rgba(165, 139, 162, 0.507);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  justify-content: space-around;
+  align-items: center;
+}
+
 
 @media only screen and (max-width: calc(1200px + 6rem)) {
   .logoContainer {
