--- a/src/app/components/Slider/Slider.module.css
+++ b/src/app/components/Slider/Slider.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 300px;
   max-height: 50vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
