--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -216,6 +216,8 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
+  padding: 0;
 }
 
 select:hover {
