--- a/src/app/components/Slider/Slider.module.css
+++ b/src/app/components/Slider/Slider.module.css
@@ -15,6 +15,7 @@
   align-items: start;
   justify-content: center;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .logo {
@@ -72,14 +73,6 @@
 
 .imageSlider {
   height: 100%;
-}
-
-
-@media only screen and (max-width: calc(1200px + 6rem)) {
-  .logoContainer {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
 }
 
 @media only screen and (max-width: 700px) {
