--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding-top: 3rem;
   background-color: var(--color-background-dark);
+  gap: 1rem;
+  font-size: 13px;
 }
