--- a/src/app/components/ProductDetails/ProductDetails.module.css
+++ b/src/app/components/ProductDetails/ProductDetails.module.css
@@ -1,10 +1,12 @@
 .container {
   display: flex;
-  background-color: var(--color-background-darker);
+  background-color: var(--color-background);
   border-radius: 5px;
   padding: 1rem;
   gap: 1rem;
   padding-bottom: 5rem;
+  border: solid 1px rgba(37, 37, 37, 0.644);
+
 }
 
 .mainImageContainer {
