--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -9,7 +9,7 @@
   min-height: 100vh;
 
   --color-primary: #96464d;
-  --color-secundary: #5e4451;
+  --color-secundary: #5e4451e8;
   --color-primary-hover: #4b2536;
   --color-secundary-hover: #703345;
   --color-background: rgb(27, 27, 27);
