--- a/src/app/components/ProductsCard/ProductCard.module.css
+++ b/src/app/components/ProductsCard/ProductCard.module.css
@@ -12,7 +12,7 @@
 }
 
 .cardContainer:hover {
-  box-shadow: 0 0 10px var(--color-primary);
+  box-shadow: 0 0 4px rgba(255, 255, 255, 0.404);
   cursor: pointer;
 }
 
