--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -11,8 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-background-dark-opacity);
-  background: linear-gradient(to top, var(--color-secundary) 1%, var(--color-background) 100%);
+  background: linear-gradient(to top, var(--color-background-dark) 1%, var(--color-background-darker) 100%);
   backdrop-filter: blur(10px);
   transition-duration: .2s;
   width: 100vw;
@@ -43,7 +42,7 @@
 .menuContainer {
   display: flex;
   justify-content: center;
-  background: linear-gradient(to bottom, rgba(26, 26, 26, 0.925) 100%, var(--color-background) 100%);
+  background: linear-gradient(to bottom, var(--color-background-dark-opacity) 100%, var(--color-background-light) 100%);
   backdrop-filter: blur(10px);
   border-bottom: solid thin rgb(83, 83, 83);
   height: 50px;
@@ -117,13 +116,6 @@
   width: 100%;
   gap: 2rem;
   font-size: 14px;
-}
-
-.authButtons {
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
 }
 
 .menuSectionMobile {
