--- a/src/app/components/AdminBoard/AdminBoard.module.css
+++ b/src/app/components/AdminBoard/AdminBoard.module.css
@@ -10,7 +10,7 @@
 }
 
 .options {
-  background: linear-gradient(168deg, var(--color-background) 50% , var(--color-secundary) 100%);
+  background: linear-gradient(168deg, var(--color-background) 50% , var(--color-secondary) 100%);
   width: 100%;
   height: 100px;
   border-radius: 5px;
@@ -21,7 +21,7 @@
 }
 
 .options:hover {
-  background: linear-gradient(168deg, var(--color-secundary) 50% , var(--color-secundary) 100%);
+  background: linear-gradient(168deg, var(--color-secondary) 50% , var(--color-secondary) 100%);
   cursor: pointer;
   color: white;
 }
