--- a/src/app/components/Slider/Slider.module.css
+++ b/src/app/components/Slider/Slider.module.css
@@ -7,6 +7,7 @@
   justify-content: center;
   padding: 0;
   overflow: hidden;
+  background: linear-gradient(to bottom, var(--color-tertiary) 10%, var(--color-background-dark) 70%);
 }
 
 .logoContainer {
@@ -53,7 +54,6 @@
 .background {
   width: 100vw;
   display: flex;
-  background-color: rgba(165, 139, 162, 0.507);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -72,8 +72,21 @@
 }
 
 .imageSlider {
-  height: 100%;
+  height: 90%;
+  transform-style: preserve-3d;
+  transition-duration: 1s;
+  transform-origin: center;
+  transform: rotateY(-10deg) rotateX(30deg) rotateZ(5deg);
+  box-shadow: 0px 0px 10px white;
+  scale: .8;
 }
+
+.imageSlider:hover {
+  transform: rotateX(0deg) rotateY(0deg) rotateZ(-5deg);
+  scale: .9;
+  opacity: 1;
+}
+
 
 @media only screen and (max-width: 700px) {
   .textContainer {
