--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -8,10 +8,11 @@
   width: 100%;
   min-height: 100vh;
 
-  --color-primary: #96464d;
-  --color-secundary: #5e4451e8;
-  --color-primary-hover: #4b2536;
-  --color-secundary-hover: #703345;
+  --color-primary: #625b88;
+  --color-primary-hover: #27254b;
+  --color-secondary: #5e4451e8;
+  --color-secondary-hover: #703345;
+  --color-tertiary: #4b4157;
   --color-background: rgb(18, 19, 24);
   --color-background-light: rgb(223, 223, 223);
   --color-background-dark: rgb(14, 15, 19);
@@ -22,8 +23,8 @@
   --color-gray-100: rgb(100, 100, 100);
   --color-gray-75: rgb(75, 75, 75);
   --color-gray-50: rgb(50, 50, 50);
-  --bg-button-secundary: #344b97;
-  --bg-button-secundary-hover: #4a63b6;
+  --bg-button-secondary: #344b97;
+  --bg-button-secondary-hover: #4a63b6;
   --bg-button-tertiary: #803643;
   --bg-button-tertiary-hover: #4b2536;
   --color-error-background: rgb(248, 180, 180);
@@ -49,12 +50,12 @@
   position: absolute;
 }
 ::-webkit-scrollbar-track {
-  background: linear-gradient(168deg, var(--color-background) 10% , var(--color-secundary) 80%);
+  background: linear-gradient(168deg, var(--color-background) 10% , var(--color-primary) 80%);
 }
 ::-webkit-scrollbar-thumb {
   background: #fff2;
   border-radius: 7px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--color-secundary-hover);
+  background: var(--color-primary-hover);
 }
