--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,7 +98,7 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   padding-top: 5rem;
-  padding-bottom: 1rem;
+  gap: 5rem;
 }
 
 .nav-container {
