--- a/src/app/components/Navigator/Navigator.module.css
+++ b/src/app/components/Navigator/Navigator.module.css
@@ -129,6 +129,12 @@
   padding: .3rem;
   display: flex;
   align-items: center;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.menuIcon:hover {
+  background-color: transparent;
 }
 
 @media only screen and (max-width: calc(1200px + 6rem)) {
