--- a/src/app/components/UserButton/UserButton.module.css
+++ b/src/app/components/UserButton/UserButton.module.css
@@ -33,6 +33,9 @@
   border-radius: 100%;
   overflow: hidden;
   border: var(--color-primary) solid ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container:hover .profilePicContainer{
